Added authentication and other small changes.
