# routes/productRouter.js
@@ -1,18 +1,45 @@
 const express = require('express');
 const { models } = require('mongoose');
-const path = require('path');
 const debug = require('debug')('app:productRouter');
-const productController = require(path.join(__dirname, '../controllers/productController'));
 
 function routes(productModel) {
   const productRouter = express.Router();
-  const controller = productController(productModel)
 
-  productRouter.route('/products')
-    .post(controller.post)
-    .get(controller.get);
+  productRouter.route('/product')
+    .post((req, res) => {
+      const product = new productModel(req.body);
+      
+      /* POST requirements here */
 
-  productRouter.use('/products/:productId', (req, res, next) => {
+      if(!(product.name && product.price)) {
+        res.status(400);
+        return res.send('Invalid entry.');
+      }
+  
+      product.save();
+      res.status(201);
+      return res.json(product);
+    })
+    .get((req, res) => {
+      const query = {};
+
+      Object.assign(query, req.query);
+  
+      productModel.find(query, (err, products) => {
+        if(err) {
+          res.send(err);
+        }
+  
+        const returnProduct = products.map((product) => {
+          let newProduct = product.toJSON();
+          /* Extra processing */
+          return newProduct;
+        });
+        return res.json(returnProduct);
+      });
+    });
+
+  productRouter.use('/product/:productId', (req, res, next) => {
     productModel.findById(req.params.productId, (err, product) => {
       if(err) {
         return res.sendStatus(404);
@@ -22,10 +49,10 @@ function routes(productModel) {
         return next();
       }
       return res.sendStatus(400);
-    })
+    });
   });
 
-  productRouter.route('/products/:productId')
+  productRouter.route('/product/:productId')
     .get((req, res) => {
       const returnProduct = req.product.toJSON();
       res.json(returnProduct);
